--- a/index.html
+++ b/index.html
@@ -565,8 +565,9 @@
 
         .hero-limited-offer {
             font-family: 'Inter', sans-serif;
-            font-size: 14px;
-            color: rgba(255, 255, 255, 0.5);
+            font-size: 16px;
+            font-weight: 500;
+            color: rgba(255, 255, 255, 0.85);
             margin: 0;
         }
 
@@ -2224,32 +2225,19 @@
             <p class="scenario-tagline fade-up visible fade-up-delay-7">Whitespace crafts <em>fresh, personalized</em> spoken meditations for exactly where you are. <strong>On-demand.</strong></p>
 
             <div class="hero-cta-section fade-up visible fade-up-delay-8" style="margin-top: 32px;">
-                <p class="hero-limited-offer">Limited time offer</p>
+                <p class="hero-limited-offer">Download now to claim your 12 free sessions</p>
                 <div class="countdown-wrapper" id="heroCountdown">
                     <span class="countdown-timer" id="hero-timer">1d 23:59:59</span>
                 </div>
-                <div class="hero-dual-buttons">
-                    <a href="https://apps.apple.com/us/app/whitespace-sleep-learn-focus/id6755617899" class="hero-cta-btn-dual" target="_blank" rel="noopener noreferrer">
-                        <svg class="hero-store-icon" viewBox="0 0 24 24" fill="currentColor"><path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/></svg>
-                        Claim 12 Free Sessions
+                <div class="app-store-buttons">
+                    <a href="https://apps.apple.com/us/app/whitespace-sleep-learn-focus/id6755617899" target="_blank" rel="noopener noreferrer" class="app-store-badge">
+                        <img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us?size=250x83&amp;releaseDate=1737590400" alt="Download on the App Store">
                     </a>
-                    <a href="https://play.google.com/store/apps/details?id=io.one2all.whitespace" class="hero-cta-btn-dual" target="_blank" rel="noopener noreferrer">
-                        <svg class="hero-store-icon" viewBox="0 0 24 24" fill="currentColor"><path d="M3,20.5V3.5C3,2.91 3.34,2.39 3.84,2.15L13.69,12L3.84,21.85C3.34,21.6 3,21.09 3,20.5M16.81,15.12L6.05,21.34L14.54,12.85L16.81,15.12M20.16,10.81C20.5,11.08 20.75,11.5 20.75,12C20.75,12.5 20.53,12.9 20.18,13.18L17.89,14.5L15.39,12L17.89,9.5L20.16,10.81M6.05,2.66L16.81,8.88L14.54,11.15L6.05,2.66Z"/></svg>
-                        Claim 12 Free Sessions
+                    <a href="https://play.google.com/store/apps/details?id=io.one2all.whitespace" target="_blank" rel="noopener noreferrer" class="app-store-badge google-play">
+                        <img src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" alt="Get it on Google Play">
                     </a>
                 </div>
             </div>
-
-            <!-- Old app store badge buttons (commented out)
-            <div class="app-store-buttons" style="margin-top: 8px;">
-                <a href="https://apps.apple.com/us/app/whitespace-sleep-learn-focus/id6755617899" target="_blank" rel="noopener noreferrer" class="app-store-badge">
-                    <img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us?size=250x83&amp;releaseDate=1737590400" alt="Download on the App Store">
-                </a>
-                <a href="https://play.google.com/store/apps/details?id=io.one2all.whitespace" target="_blank" rel="noopener noreferrer" class="app-store-badge google-play">
-                    <img src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" alt="Get it on Google Play">
-                </a>
-            </div>
-            -->
 
             <div class="hero-tweet-wrapper fade-up visible fade-up-delay-9" style="margin-top: 32px;">
                 <a href="https://x.com/yusukelp/status/2016767347097583928" target="_blank" rel="noopener" class="hero-tweet-card">
