--- a/index.html
+++ b/index.html
@@ -2340,18 +2340,16 @@
             <p class="scenario-tagline fade-up visible fade-up-delay-7">Whitespace crafts <em>fresh, personalized</em> spoken meditations for exactly where you are. <strong>On-demand.</strong></p>
 
             <div class="hero-use-cases" id="heroUseCases">
-                <span class="hero-use-case-label">Whether you want to</span>
+                <span class="hero-use-case-label">For Sleep, Calm, Focus and</span>
                 <span class="hero-use-case-rotator" id="heroUseCaseRotator">
-                    <span class="hero-use-case">fall asleep faster</span>
-                    <span class="hero-use-case">learn Japanese</span>
-                    <span class="hero-use-case">calm pre-meeting anxiety</span>
-                    <span class="hero-use-case">prepare for a big pitch</span>
-                    <span class="hero-use-case">process a difficult conversation</span>
-                    <span class="hero-use-case">find focus for deep work</span>
-                    <span class="hero-use-case">build confidence before a date</span>
-                    <span class="hero-use-case">work through grief</span>
-                    <span class="hero-use-case">visualize your goals</span>
-                    <span class="hero-use-case">decompress after a long day</span>
+                    <span class="hero-use-case">learning Japanese in your sleep</span>
+                    <span class="hero-use-case">working through grief</span>
+                    <span class="hero-use-case">calming pre-meeting nerves</span>
+                    <span class="hero-use-case">preparing for a big pitch</span>
+                    <span class="hero-use-case">building confidence before a date</span>
+                    <span class="hero-use-case">finding flow for deep work</span>
+                    <span class="hero-use-case">visualizing your goals</span>
+                    <span class="hero-use-case">winding down after a long day</span>
                 </span>
             </div>
 
@@ -2372,16 +2370,16 @@
             </div>
 
             <div class="hero-tweet-wrapper fade-up visible fade-up-delay-9" style="margin-top: 32px;">
-                <a href="https://x.com/Lolasasfi/status/2010321044066730439" target="_blank" rel="noopener" class="hero-tweet-card">
+                <a href="https://x.com/jalaal_tweets/status/2012295279110697101" target="_blank" rel="noopener" class="hero-tweet-card">
                     <div class="hero-tweet-header">
-                        <img src="https://unavatar.io/twitter/Lolasasfi" alt="" class="hero-tweet-avatar">
+                        <img src="https://unavatar.io/twitter/jalaal_tweets" alt="" class="hero-tweet-avatar">
                         <div class="hero-tweet-author-info">
-                            <span class="hero-tweet-name">Lola</span>
-                            <span class="hero-tweet-handle">@Lolasasfi</span>
+                            <span class="hero-tweet-name">Jalaal</span>
+                            <span class="hero-tweet-handle">@jalaal_tweets</span>
                         </div>
                         <svg class="hero-tweet-x-logo" viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
                     </div>
-                    <p class="hero-tweet-content">"wait you're using sleep meditations to manifest mrr targets? lowkey fascinating"</p>
+                    <p class="hero-tweet-content">"For someone who learns more by listening or watching, this would actually help as I enjoy meditation before going to bed"</p>
                 </a>
                 <a href="#testimonials" class="hero-more-testimonials">
                     See more reviews
