--- a/index.html
+++ b/index.html
@@ -1842,6 +1842,16 @@
             font-weight: 500;
         }
 
+        .hero-use-cases-static {
+            font-family: 'Inter', sans-serif;
+            font-size: clamp(0.95rem, 2.5vw, 1.1rem);
+            color: rgba(255, 255, 255, 0.45);
+            margin-top: 8px;
+            font-weight: 400;
+            text-align: center;
+            font-style: italic;
+        }
+
         /* Hero CTA Button - Phosphene Glow */
         .hero-cta-btn {
             display: inline-block;
@@ -2338,38 +2348,9 @@
             </h1>
 
             <p class="scenario-tagline fade-up visible fade-up-delay-7">Whitespace crafts <em>fresh, personalized</em> spoken meditations for exactly where you are. <strong>On-demand.</strong></p>
+            <p class="hero-use-cases-static fade-up visible fade-up-delay-7">For sleep, calm, focus — or learning Japanese in your sleep.</p>
 
-            <div class="hero-use-cases" id="heroUseCases">
-                <span class="hero-use-case-label">For Sleep, Calm, Focus and</span>
-                <span class="hero-use-case-rotator" id="heroUseCaseRotator">
-                    <span class="hero-use-case">learning Japanese in your sleep</span>
-                    <span class="hero-use-case">working through grief</span>
-                    <span class="hero-use-case">calming pre-meeting nerves</span>
-                    <span class="hero-use-case">preparing for a big pitch</span>
-                    <span class="hero-use-case">building confidence before a date</span>
-                    <span class="hero-use-case">finding flow for deep work</span>
-                    <span class="hero-use-case">visualizing your goals</span>
-                    <span class="hero-use-case">winding down after a long day</span>
-                </span>
-            </div>
-
-            <div class="hero-cta-box fade-up visible fade-up-delay-8" style="margin-top: 32px;">
-                <p class="hero-cta-headline">Get <strong>12 free sessions</strong> when you download</p>
-                <div class="hero-cta-timer-row">
-                    <span class="hero-cta-timer-label">Offer ends in</span>
-                    <span class="countdown-timer" id="hero-timer">1d 23:59:59</span>
-                </div>
-                <div class="app-store-buttons">
-                    <a href="https://apps.apple.com/us/app/whitespace-sleep-learn-focus/id6755617899" target="_blank" rel="noopener noreferrer" class="app-store-badge">
-                        <img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us?size=250x83&amp;releaseDate=1737590400" alt="Download on the App Store">
-                    </a>
-                    <a href="https://play.google.com/store/apps/details?id=io.one2all.whitespace" target="_blank" rel="noopener noreferrer" class="app-store-badge google-play">
-                        <img src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" alt="Get it on Google Play">
-                    </a>
-                </div>
-            </div>
-
-            <div class="hero-tweet-wrapper fade-up visible fade-up-delay-9" style="margin-top: 32px;">
+            <div class="hero-tweet-wrapper fade-up visible fade-up-delay-8" style="margin-top: 28px;">
                 <a href="https://x.com/jalaal_tweets/status/2012295279110697101" target="_blank" rel="noopener" class="hero-tweet-card">
                     <div class="hero-tweet-header">
                         <img src="https://unavatar.io/twitter/jalaal_tweets" alt="" class="hero-tweet-avatar">
@@ -2385,6 +2366,22 @@
                     See more reviews
                     <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M6 9l6 6 6-6"/></svg>
                 </a>
+            </div>
+
+            <div class="hero-cta-box fade-up visible fade-up-delay-9" style="margin-top: 24px;">
+                <p class="hero-cta-headline">Get <strong>12 free sessions</strong> when you download</p>
+                <div class="hero-cta-timer-row">
+                    <span class="hero-cta-timer-label">Offer ends in</span>
+                    <span class="countdown-timer" id="hero-timer">1d 23:59:59</span>
+                </div>
+                <div class="app-store-buttons">
+                    <a href="https://apps.apple.com/us/app/whitespace-sleep-learn-focus/id6755617899" target="_blank" rel="noopener noreferrer" class="app-store-badge">
+                        <img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us?size=250x83&amp;releaseDate=1737590400" alt="Download on the App Store">
+                    </a>
+                    <a href="https://play.google.com/store/apps/details?id=io.one2all.whitespace" target="_blank" rel="noopener noreferrer" class="app-store-badge google-play">
+                        <img src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" alt="Get it on Google Play">
+                    </a>
+                </div>
             </div>
         </div>
 
