--- a/index.html
+++ b/index.html
@@ -2348,7 +2348,7 @@
             </h1>
 
             <p class="scenario-tagline fade-up visible fade-up-delay-7">Whitespace crafts <em>fresh, personalized</em> spoken meditations for exactly where you are. <strong>On-demand.</strong></p>
-            <p class="hero-use-cases-static fade-up visible fade-up-delay-7">For sleep, calm, focus — or learning Japanese in your sleep.</p>
+            <p class="hero-use-cases-static fade-up visible fade-up-delay-7">For sleep, calm, focus — or nearly anything.</p>
 
             <div class="hero-tweet-wrapper fade-up visible fade-up-delay-8" style="margin-top: 28px;">
                 <a href="https://x.com/jalaal_tweets/status/2012295279110697101" target="_blank" rel="noopener" class="hero-tweet-card">
