--- a/index.html
+++ b/index.html
@@ -261,25 +261,30 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 12px;
-            margin-top: 24px;
+            gap: 16px;
+            margin-top: 40px;
+            margin-bottom: 16px;
+            padding: 32px 24px;
+            background: rgba(255, 255, 255, 0.02);
+            border-radius: 20px;
+            max-width: 800px;
         }
 
         .hero-quotes-row {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            gap: 8px 20px;
-            max-width: 700px;
+            gap: 16px 28px;
+            max-width: 100%;
         }
 
         .hero-quote {
             display: inline-flex;
             align-items: center;
-            gap: 8px;
+            gap: 10px;
             font-family: 'Inter', sans-serif;
-            font-size: 14px;
-            color: rgba(255, 255, 255, 0.7);
+            font-size: 16px;
+            color: rgba(255, 255, 255, 0.75);
             text-decoration: none;
             transition: all 0.2s ease;
         }
@@ -289,12 +294,12 @@
         }
 
         .hero-quote-avatar {
-            width: 22px;
-            height: 22px;
+            width: 28px;
+            height: 28px;
             border-radius: 50%;
             object-fit: cover;
             flex-shrink: 0;
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.15);
         }
 
         .hero-quote-text {
@@ -302,9 +307,9 @@
         }
 
         .hero-quote-author {
-            color: rgba(255, 255, 255, 0.4);
+            color: rgba(255, 255, 255, 0.45);
             font-style: normal;
-            font-size: 13px;
+            font-size: 14px;
         }
 
         .hero-more-reviews {
@@ -312,11 +317,11 @@
             align-items: center;
             gap: 6px;
             font-family: 'Inter', sans-serif;
-            font-size: 13px;
+            font-size: 14px;
             color: rgba(107, 140, 255, 0.7);
             text-decoration: none;
             transition: all 0.2s ease;
-            margin-top: 4px;
+            margin-top: 8px;
         }
 
         .hero-more-reviews:hover {
@@ -332,13 +337,22 @@
         }
 
         @media (max-width: 600px) {
+            .hero-quotes {
+                padding: 24px 20px;
+                margin-top: 32px;
+            }
+
             .hero-quotes-row {
                 flex-direction: column;
                 align-items: center;
-                gap: 10px;
+                gap: 14px;
             }
 
             .hero-quote {
+                font-size: 15px;
+            }
+
+            .hero-quote-author {
                 font-size: 13px;
             }
         }
@@ -2310,7 +2324,7 @@
             <p class="scenario-tagline fade-up visible fade-up-delay-7">Whitespace crafts <em>fresh, personalized</em> spoken meditations for exactly where you are. <strong>On-demand.</strong></p>
             <p class="hero-use-cases-static fade-up visible fade-up-delay-7">For sleep, calm, focus — or nearly anything.</p>
 
-            <div class="hero-quotes fade-up visible fade-up-delay-8" style="margin-top: 20px;">
+            <div class="hero-quotes fade-up visible fade-up-delay-8">
                 <div class="hero-quotes-row">
                     <a href="https://x.com/jalaal_tweets/status/2012295279110697101" target="_blank" rel="noopener" class="hero-quote">
                         <img src="https://unavatar.io/twitter/jalaal_tweets" alt="" class="hero-quote-avatar">
@@ -2327,6 +2341,18 @@
                         <span class="hero-quote-text">"My wife might actually love this"</span>
                         <span class="hero-quote-author">— Sourabh</span>
                     </a>
+                    <span class="hero-quote">
+                        <span class="hero-quote-text">"That's really cool"</span>
+                        <span class="hero-quote-author">— Jesse</span>
+                    </span>
+                    <span class="hero-quote">
+                        <span class="hero-quote-text">"Definitely showing this to my wife"</span>
+                        <span class="hero-quote-author">— DisplayGateGuard</span>
+                    </span>
+                    <span class="hero-quote">
+                        <span class="hero-quote-text">"Just had a session, really good!! Love it"</span>
+                        <span class="hero-quote-author">— Kelly</span>
+                    </span>
                 </div>
                 <a href="#testimonials" class="hero-more-reviews">
                     See more reviews
@@ -2334,7 +2360,7 @@
                 </a>
             </div>
 
-            <div class="hero-cta-box fade-up visible fade-up-delay-9" style="margin-top: 24px;">
+            <div class="hero-cta-box fade-up visible fade-up-delay-9" style="margin-top: 36px;">
                 <p class="hero-cta-headline">Get <strong>12 free sessions</strong> when you download</p>
                 <div class="hero-cta-timer-row">
                     <span class="hero-cta-timer-label">Offer ends in</span>
