--- a/index.html
+++ b/index.html
@@ -2326,33 +2326,36 @@
 
             <div class="hero-quotes fade-up visible fade-up-delay-8">
                 <div class="hero-quotes-row">
-                    <a href="https://x.com/jalaal_tweets/status/2012295279110697101" target="_blank" rel="noopener" class="hero-quote">
-                        <img src="https://unavatar.io/twitter/jalaal_tweets" alt="" class="hero-quote-avatar">
-                        <span class="hero-quote-text">"I enjoy meditation before going to bed"</span>
-                        <span class="hero-quote-author">— Jalaal</span>
-                    </a>
-                    <a href="https://x.com/Lolasasfi/status/2010321044066730439" target="_blank" rel="noopener" class="hero-quote">
-                        <img src="https://unavatar.io/twitter/Lolasasfi" alt="" class="hero-quote-avatar">
-                        <span class="hero-quote-text">"sleep meditations to manifest goals?"</span>
-                        <span class="hero-quote-author">— Lola</span>
+                    <a href="https://x.com/yusukelp/status/2016767347097583928" target="_blank" rel="noopener" class="hero-quote">
+                        <img src="https://unavatar.io/twitter/yusukelp" alt="" class="hero-quote-avatar">
+                        <span class="hero-quote-text">"This is insane. It blew my mind"</span>
+                        <span class="hero-quote-author">— Yusuke</span>
                     </a>
                     <a href="https://x.com/choraria/status/2010429436919984195" target="_blank" rel="noopener" class="hero-quote">
                         <img src="https://unavatar.io/twitter/choraria" alt="" class="hero-quote-avatar">
-                        <span class="hero-quote-text">"My wife might actually love this"</span>
+                        <span class="hero-quote-text">"Man, this is amazing!"</span>
                         <span class="hero-quote-author">— Sourabh</span>
                     </a>
-                    <span class="hero-quote">
-                        <span class="hero-quote-text">"That's really cool"</span>
-                        <span class="hero-quote-author">— Jesse</span>
-                    </span>
-                    <span class="hero-quote">
-                        <span class="hero-quote-text">"Definitely showing this to my wife"</span>
-                        <span class="hero-quote-author">— DisplayGateGuard</span>
-                    </span>
-                    <span class="hero-quote">
+                    <a href="https://x.com/Lolasasfi/status/2010321044066730439" target="_blank" rel="noopener" class="hero-quote">
+                        <img src="https://unavatar.io/twitter/Lolasasfi" alt="" class="hero-quote-avatar">
+                        <span class="hero-quote-text">"lowkey fascinating"</span>
+                        <span class="hero-quote-author">— Lola</span>
+                    </a>
+                    <a href="https://x.com/Tobby_scraper/status/2008471779233452059" target="_blank" rel="noopener" class="hero-quote">
+                        <img src="https://unavatar.io/twitter/Tobby_scraper" alt="" class="hero-quote-avatar">
+                        <span class="hero-quote-text">"Super hyped!"</span>
+                        <span class="hero-quote-author">— Tobby</span>
+                    </a>
+                    <a href="https://x.com/HiEllenNg" target="_blank" rel="noopener" class="hero-quote">
+                        <img src="https://unavatar.io/twitter/HiEllenNg" alt="" class="hero-quote-avatar">
+                        <span class="hero-quote-text">"I actually dozed off in the middle of it 😂"</span>
+                        <span class="hero-quote-author">— Ellen</span>
+                    </a>
+                    <a href="https://www.instagram.com/kellyhu_hui/" target="_blank" rel="noopener" class="hero-quote">
+                        <img src="https://unavatar.io/instagram/kellyhu_hui" alt="" class="hero-quote-avatar">
                         <span class="hero-quote-text">"Just had a session, really good!! Love it"</span>
                         <span class="hero-quote-author">— Kelly</span>
-                    </span>
+                    </a>
                 </div>
                 <a href="#testimonials" class="hero-more-reviews">
                     See more reviews
