--- a/index.html
+++ b/index.html
@@ -2352,15 +2352,11 @@
                         <span class="hero-quote-author">— Ellen</span>
                     </a>
                     <a href="https://www.instagram.com/kellyhu_hui/" target="_blank" rel="noopener" class="hero-quote">
-                        <img src="https://unavatar.io/instagram/kellyhu_hui" alt="" class="hero-quote-avatar">
+                        <img src="kelly-avatar.jpg" alt="" class="hero-quote-avatar">
                         <span class="hero-quote-text">"Just had a session, really good!! Love it"</span>
                         <span class="hero-quote-author">— Kelly</span>
                     </a>
                 </div>
-                <a href="#testimonials" class="hero-more-reviews">
-                    See more reviews
-                    <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M6 9l6 6 6-6"/></svg>
-                </a>
             </div>
 
             <div class="hero-cta-box fade-up visible fade-up-delay-9" style="margin-top: 36px;">
@@ -2377,6 +2373,10 @@
                         <img src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" alt="Get it on Google Play">
                     </a>
                 </div>
+                <a href="#testimonials" class="hero-more-reviews">
+                    See more reviews
+                    <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M6 9l6 6 6-6"/></svg>
+                </a>
             </div>
         </div>
 
