--- a/index.html
+++ b/index.html
@@ -2326,22 +2326,22 @@
 
             <div class="hero-quotes fade-up visible fade-up-delay-8">
                 <div class="hero-quotes-row">
-                    <a href="https://x.com/yusukelp/status/2016767347097583928" target="_blank" rel="noopener" class="hero-quote">
+                    <a href="https://x.com/yusukelp" target="_blank" rel="noopener" class="hero-quote">
                         <img src="https://unavatar.io/twitter/yusukelp" alt="" class="hero-quote-avatar">
                         <span class="hero-quote-text">"This is insane. It blew my mind"</span>
                         <span class="hero-quote-author">— Yusuke</span>
                     </a>
-                    <a href="https://x.com/choraria/status/2010429436919984195" target="_blank" rel="noopener" class="hero-quote">
+                    <a href="https://x.com/choraria" target="_blank" rel="noopener" class="hero-quote">
                         <img src="https://unavatar.io/twitter/choraria" alt="" class="hero-quote-avatar">
                         <span class="hero-quote-text">"Man, this is amazing!"</span>
                         <span class="hero-quote-author">— Sourabh</span>
                     </a>
-                    <a href="https://x.com/Lolasasfi/status/2010321044066730439" target="_blank" rel="noopener" class="hero-quote">
+                    <a href="https://x.com/Lolasasfi" target="_blank" rel="noopener" class="hero-quote">
                         <img src="https://unavatar.io/twitter/Lolasasfi" alt="" class="hero-quote-avatar">
                         <span class="hero-quote-text">"lowkey fascinating"</span>
                         <span class="hero-quote-author">— Lola</span>
                     </a>
-                    <a href="https://x.com/Tobby_scraper/status/2008471779233452059" target="_blank" rel="noopener" class="hero-quote">
+                    <a href="https://x.com/Tobby_scraper" target="_blank" rel="noopener" class="hero-quote">
                         <img src="https://unavatar.io/twitter/Tobby_scraper" alt="" class="hero-quote-avatar">
                         <span class="hero-quote-text">"Super hyped!"</span>
                         <span class="hero-quote-author">— Tobby</span>
