--- a/welcome.html
+++ b/welcome.html
@@ -231,7 +231,7 @@
                 <img src="https://auth.trywhitespace.com/storage/v1/object/public/images/google_badge.png" alt="Get it on Google Play">
             </a>
         </div>
-        <div class="credits-note" id="creditsNote"><strong>12 free credits</strong> — over 60 minutes of personalized meditation</div>
+        <div class="credits-note" id="creditsNote"><strong>10 free sessions</strong> — personalized meditation that's yours to keep</div>
         <div class="subheader" id="subheader">Check your inbox for a welcome email.</div>
         </div>
         </div>
