--- a/index.html
+++ b/index.html
@@ -787,6 +787,29 @@
             }
         }
 
+        /* Award Badge */
+        .award-badge {
+            display: inline-block;
+            margin-top: 20px;
+            transition: all 0.3s ease;
+        }
+
+        .award-badge:hover {
+            transform: translateY(-2px);
+            opacity: 0.9;
+        }
+
+        .award-badge img {
+            width: 180px;
+            height: auto;
+        }
+
+        @media (min-width: 480px) {
+            .award-badge img {
+                width: 200px;
+            }
+        }
+
         .form-note {
             text-align: center;
             margin-top: 12px;
@@ -2373,6 +2396,9 @@
                         <img src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" alt="Get it on Google Play">
                     </a>
                 </div>
+                <a href="https://www.uneed.best/tool/whitespace" target="_blank" class="award-badge">
+                    <img src="https://www.uneed.best/POTD1A.png" alt="Uneed Product of the Day #1" />
+                </a>
                 <a href="#testimonials" class="hero-more-reviews">
                     See more reviews
                     <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M6 9l6 6 6-6"/></svg>
@@ -2805,6 +2831,9 @@
                         <img src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" alt="Get it on Google Play">
                     </a>
                 </div>
+                <a href="https://www.uneed.best/tool/whitespace" target="_blank" class="award-badge">
+                    <img src="https://www.uneed.best/POTD1A.png" alt="Uneed Product of the Day #1" />
+                </a>
                 <div class="countdown-wrapper" id="ctaCountdown" style="margin-top: 24px;">
                     <span class="countdown-label">Bonus ends in</span>
                     <span class="countdown-timer" id="cta-timer">6d 05:32:18</span>
